vlib/v/checker/tests/no_interface_receiver.out
vlib/v/checker/tests/no_interface_receiver.v:5:5: error: interfaces cannot be used as method receiver
    3 | }
    4 |
    5 | fn (a Animal) str() {}
      |     ~~~~~~~~

