vlib/v/checker/tests/no_interface_receiver.vv
interface Animal {
	speak()
}

fn (a Animal) str() {}
